Fixed og and meta

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,46 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
+        <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4a4090">
+        <meta name="msapplication-TileColor" content="#4a4090">
+        <meta name="theme-color" content="#ffffff">
+        
+        <!-- OPEN GRAPH PROTOCOL http://ogp.me/ -->
+        <meta property="fb:pages" content="" />
+        <meta property="og:type"   content="website" />
+        <meta property="fb:app_id" content="" />
+
+        <meta property="og:url" content="https://beddertravel.com/" />
+        <meta property="og:locale" content="fr">
+        <meta property="og:title" content="Bedder Travel">
+        <meta property="og:image" content="">
+        <meta property="og:image:secure_url" content=""/>
+        <meta property="og:image:type" content="image/jpeg" />
+        <meta property="og:description" content=""/>
+        <meta property="og:site_name" content="Bedder Travel">
+        <link rel="canonical" href="https://beddertravel.com/">
         <meta name="author" content="">
+        <meta name="description" content="Traveling is easy" />
+        <title>Bedder Travel</title>
 
-        <link rel="icon" type="image/png"  href="assets/img/ico/favicon.png">
 
-        <title>Bedder</title>
+        <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Corporation",
+          "name": "Bedder Trave;",
+          "url": "https://beddertravel.com",
+          "logo": "https://beddertravel.com/assets/img/logos/bedder.svg",
+          "sameAs": [
+            "https://www.facebook.com/Bedderstay/",
+            "https://www.instagram.com/bedder_travel/"
+          ]
+        }
+        </script>
 
         <!-- Import Main CSS -->
         <link rel="stylesheet" href="assets/css/main.min.css">
@@ -22,7 +56,7 @@
         <div id="top-bar" class="navbar-fixed-top">
             <div class="container">
                 <a href="index.html"><img src="assets/img/logos/bedder.svg" alt="Bedder"></a>
-                <a href="#" class="login-btn">LOGIN</a>
+                <!-- <a href="#" class="login-btn">LOGIN</a> -->
             </div>
         </div>
         <!-- // top bar  -->
