--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4a4090">
         <meta name="msapplication-TileColor" content="#4a4090">
         <meta name="theme-color" content="#ffffff">
-        
+
         <!-- OPEN GRAPH PROTOCOL http://ogp.me/ -->
         <meta property="fb:pages" content="" />
         <meta property="og:type"   content="website" />
@@ -19,16 +19,16 @@
 
         <meta property="og:url" content="https://beddertravel.com/" />
         <meta property="og:locale" content="fr">
-        <meta property="og:title" content="Bedder Travel">
+        <meta property="og:title" content="Bedder Travel | Accomodation made easy">
         <meta property="og:image" content="">
         <meta property="og:image:secure_url" content=""/>
         <meta property="og:image:type" content="image/jpeg" />
-        <meta property="og:description" content=""/>
+        <meta property="og:description" content="Bedder uses the power of user generated content to guide other travellers like you to the best places to stay."/>
         <meta property="og:site_name" content="Bedder Travel">
         <link rel="canonical" href="https://beddertravel.com/">
-        <meta name="author" content="">
-        <meta name="description" content="Traveling is easy" />
-        <title>Bedder Travel</title>
+        <meta name="author" content="Bedder">
+        <meta name="description" content="Bedder uses the power of user generated content to guide other travellers like you to the best places to stay." />
+        <title>Bedder Travel | Accomodation made easy</title>
 
 
         <script type="application/ld+json">
@@ -91,11 +91,11 @@
             </div>
             <!-- // slider  -->
             <div class="caption">
-                <h1>a better way to discover</h1>
-                <h2>new things to do</h2>
-                <p>Subline goes here on this place</p>
+                <h1>Traveling memories made easy</h1>
+                <h2>Share your favorite spots</h2>
+                <p>Bedder uses the power of user generated content to guide other travellers like you to the best places to stay.</p>
                 <div class="form-block">
-                    <input type="email" placeholder="eNTER YOUR EMAIL">
+                    <input type="email" placeholder="ENTER YOUR EMAIL">
                     <input type="submit" value="START NOW">
                 </div>
                 <!-- // form block  -->
@@ -109,7 +109,7 @@
                     <!-- // item  -->
                     <div class="featured-item">
                         <img src="assets/img/ico/feat2.png" alt="">
-                        <small>Get money  for every booking </small>
+                        <small>Get money for every booking </small>
                     </div>
                     <!-- // item  -->                    
                 </div>
