Fixed style, added GTM container

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-WDS4KQW');</script>
+        <!-- End Google Tag Manager -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +24,7 @@
         <meta property="og:type"   content="website" />
         <meta property="fb:app_id" content="" />
 
-        <meta property="og:url" content="https://beddertravel.com/" />
+        <meta property="og:url" content="https://www.beddertravel.com/" />
         <meta property="og:locale" content="fr">
         <meta property="og:title" content="Bedder Travel | Accomodation made easy">
         <meta property="og:image" content="">
@@ -25,7 +32,7 @@
         <meta property="og:image:type" content="image/jpeg" />
         <meta property="og:description" content="Bedder uses the power of user generated content to guide other travellers like you to the best places to stay."/>
         <meta property="og:site_name" content="Bedder Travel">
-        <link rel="canonical" href="https://beddertravel.com/">
+        <link rel="canonical" href="https://www.beddertravel.com/">
         <meta name="author" content="Bedder">
         <meta name="description" content="Bedder uses the power of user generated content to guide other travellers like you to the best places to stay." />
         <title>Bedder Travel | Accomodation made easy</title>
@@ -36,8 +43,8 @@
           "@context": "http://schema.org",
           "@type": "Corporation",
           "name": "Bedder Trave;",
-          "url": "https://beddertravel.com",
-          "logo": "https://beddertravel.com/assets/img/logos/bedder.svg",
+          "url": "https://www.beddertravel.com",
+          "logo": "https://www.beddertravel.com/assets/img/logos/bedder.svg",
           "sameAs": [
             "https://www.facebook.com/Bedderstay/",
             "https://www.instagram.com/bedder_travel/"
@@ -51,6 +58,11 @@
     </head>
 
     <body>
+        
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WDS4KQW"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <div id="page-wrapper">
         <div id="top-bar" class="navbar-fixed-top">
