--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     </head>
 
     <body>
-        
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WDS4KQW"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -106,10 +106,10 @@
                 <h1>Traveling memories made easy</h1>
                 <h2>Share your favorite spots</h2>
                 <p>Bedder uses the power of user generated content to guide other travellers like you to the best places to stay.</p>
-                <div class="form-block">
+                <form class="form-block" netlify name="newsletter" action="index.html" method="post">
                     <input type="email" placeholder="ENTER YOUR EMAIL">
                     <input type="submit" value="START NOW">
-                </div>
+                </form>
                 <!-- // form block  -->
                 <div class="featured-block">
                     <img src="assets/img/ico/arrow.png" alt="" class="arrow-img">
