Added google verification

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
         {
           "@context": "http://schema.org",
           "@type": "Corporation",
-          "name": "Bedder Trave;",
+          "name": "Bedder Travel",
           "url": "https://www.beddertravel.com",
           "logo": "https://www.beddertravel.com/assets/img/logos/bedder.svg",
           "sameAs": [
@@ -54,6 +54,7 @@
 
         <!-- Import Main CSS -->
         <link rel="stylesheet" href="assets/css/main.min.css">
+        <meta name="google-site-verification" content="8c5IvhkjzQOYkeHYo3IuTIdxYvdkFjhnLJOJj0e8HF8" />
 
     </head>
 
